# mmcifix

./: README.md  pyproject.toml
mmcifix/: __init__.py  fixers.py  importance.py  util.py
tests/: AF-P04406-F1-model_v1.cif  AF-P27037-F1-model_v1.cif  P27037_one_ligand.cif  test_mmcifix.py
